# DocuMind

./: .dockerignore  .env.example  .gitattributes  .gitignore  DECISIONS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/api/: chat.py  documents.py
backend/app/core/: chunking.py  ingestion.py  parsing.py  rag.py  retrieval.py
backend/app/db/: documents.py  vectorstore.py
backend/app/providers/: base.py  gemini.py
backend/tests/: conftest.py  test_api.py  test_chunking.py  test_ingestion.py  test_retrieval.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  MessageBubble.tsx  Sidebar.tsx  SourceChips.tsx  Toast.tsx
frontend/src/lib/: api.ts
