[project]
name = "docmind-backend"
version = "0.1.0"
description = "DocuMind — RAG document assistant backend (FastAPI + Gemini + ChromaDB)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "chromadb>=1.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
# The RAG prompt is a spec-fixed verbatim string; long lines are intentional.
"app/core/rag.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
